kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-webhook-svc
spec:
  selector:
    app: notification-webhook
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
