kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-webhook.example.com
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: notification-webhook.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notification-webhook-svc
            port:
              number: 8080
